Added sidebars and landing pages for protocol and software.

--- a/_includes/custom/sidebarconfigs.html
+++ b/_includes/custom/sidebarconfigs.html
@@ -4,6 +4,12 @@
 {% elsif page.sidebar == "paradigm_sidebar" %}
 {% assign sidebar = site.data.sidebars.paradigm_sidebar.entries %}
 
+{% elsif page.sidebar == "software_sidebar" %}
+{% assign sidebar = site.data.sidebars.software_sidebar.entries %}
+
+{% elsif page.sidebar == "protocol_sidebar" %}
+{% assign sidebar = site.data.sidebars.protocol_sidebar.entries %}
+
 {% elsif page.sidebar == "tags_sidebar" %}
 {% assign sidebar = site.data.sidebars.tags_sidebar.entries %}
 
