Fixed capitilization in RFC notice.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -33,7 +33,7 @@ layout: default
       </div>
       <div id="collapseOne" class="panel-collapse noCrossRef collapse" aria-expanded="false" style="height: 0px;">
         <div class="panel-body">
-          The information on this page is a proposed standard and subject to change. While in RFC status it is open to anyone in the community to provide input and improvements to the standard. Once the community has reached a consensus the APEX Standards board will update its status to accepted
+          The information on this page is a proposed standard and subject to change. While in RFC status it is open to anyone in the community to provide input and improvements to the standard. Once the community has reached a consensus the APEX Standards Board will update its status to accepted
           and this warning will be removed.<br />
           {% if page.rfclink %}
           <br />
