--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -8,11 +8,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="fa fa-home fa-lg navbar-brand" href="{{site.baseurl}}/">&nbsp;<span class="projectTitle"> {{site.topnav_title}}</span></a>
+            <a class="navbar-brand" href="{{site.baseurl}}/">&nbsp;<span class="projectTitle"> {{site.topnav_title}}</span></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <!-- entries without drop-downs appear here -->
+                <li><a href="/">Home</a></li>
                 {% for entry in site.data.topnav.topnav %}
                 {% for subcategory in entry.subcategories %}
                 {% if subcategory.external_url %}
@@ -44,7 +45,6 @@
                 </li>
                 {% endfor %}
                 {% endfor %}
-                {% include feedback.html %}
                 <!--comment out this block if you want to hide search-->
                 <li>
                     <!--start search-->
